feat(security): 添加token自动续期